@@ -4,9 +4,10 @@ Database update scripts can be found under sql/update directory.
 
 Version 1.7.1
 - fix for formdefinitions, when process_class not set post action should be 'email'
-- fixed loading the JS and CSS files in the admin interface
+- fixed loading the JS and CSS files in the admin interface and on front
 - added CSS colors for 'File' and 'Select' types in admin interface
 - fixed select list default value
+- 'File' and 'Select' types needs to be temporarly disabled, since they're not working as they should
 
 Version 1.7.0
 - Added possibility to run external processing class, new form field 'Process class'
